# Banco-Malvader

./: .gitignore  CMakeLists.txt  README.md
banco/: Saque.c  abrir_conta.c  atualizar-telefone-agencia.c  banco  banco.h  consultar-saldo-dados.c  deposito.c  encerrar_conta.c  funcao-atualizar-telefone-agencia.c  funcao-deposito.c  funcao-transferir.c  funcoes_abrir_conta.c  listar_contas.c  main.c  mostrar_dados.c  ui.c  utils.c
